--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-lottie": "^1.2.3",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "react-semantic-toasts": "^0.6.5",
     "semantic-ui-react": "^2.0.4",
     "yup": "^0.32.11"
   },
