--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "react-semantic-toasts": "^0.6.5",
+    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
     "yup": "^0.32.11"
   },
