--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^2.8.5",
+    "@reduxjs/toolkit": "^1.7.1",
     "firebase": "^9.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^4.0.1",
     "react-hook-form": "^7.22.5",
     "react-lottie": "^1.2.3",
+    "react-redux": "^7.2.6",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "react-semantic-toasts": "^0.6.5",
